# credport

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
contract/: README.md  package.json  tsconfig.json
contract/src/: index.ts  passport.compact  witnesses.ts
contract/src/managed/passport/compiler/: contract-info.json
contract/src/managed/passport/contract/: index.d.ts  index.js  index.js.map
contract/src/managed/passport/zkir/: addIssuer.bzkir  addIssuer.zkir  issueCredential.bzkir  issueCredential.zkir  proveAgeOver.bzkir  proveAgeOver.zkir  proveIdentity.bzkir  proveIdentity.zkir  proveUniqueHuman.bzkir  proveUniqueHuman.zkir  revoke.bzkir  revoke.zkir
issuer-cli/: package.json
issuer-cli/src/: deploy.ts  providers.ts
kyc-api/: package.json
kyc-api/api/: kyc.ts
passport-sdk/: README.md  package.json  tsconfig.json
passport-sdk/src/: api.ts  config.ts  encoding.ts  holder.ts  index.ts  issuer.ts  smoke.test.mjs  types.ts  verifier.ts
python/: .gitignore  LICENSE  README.md  pyproject.toml
python/examples/: gate.py
python/src/zkpassport/: __init__.py  client.py  fastapi.py  models.py
python/tests/: test_client.py
scripts/: copy-managed.mjs  sync-zk.mjs
server/: package.json  tsconfig.json
server/src/: groq.ts  index.ts  verify.ts
verifier-ui/: .env.preprod  index.html  package.json  tsconfig.json  vite.config.ts
verifier-ui/src/: App.tsx  globals.ts  kyc.ts  main.tsx  styles.css
verifier-ui/src/components/: Code.tsx  Console.tsx  DocsPage.tsx  Hero.tsx  Icons.tsx  Nav.tsx  Sections.tsx
verifier-ui/src/hooks/: usePassport.ts  useReveal.ts
verifier-ui/src/lib/: format.ts
verifier-ui/src/midnight/: local-storage-private-state-provider.ts  providers.ts  wallet.ts
