[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zkpassport"
version = "0.1.0"
description = "Verifier client for the zkPassport privacy credential system on the Midnight blockchain — gate on a reusable 'verified' bit without ever seeing the underlying credential."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "zkPassport" }]
keywords = [
    "midnight",
    "zero-knowledge",
    "credential",
    "age-verification",
    "privacy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
fastapi = ["fastapi>=0.110", "starlette>=0.36"]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "fastapi>=0.110", "starlette>=0.36"]

[project.urls]
Homepage = "https://github.com/zkpassport/zkpassport"
Repository = "https://github.com/zkpassport/zkpassport"
Issues = "https://github.com/zkpassport/zkpassport/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/zkpassport"]

[tool.hatch.build.targets.sdist]
include = ["src/zkpassport", "README.md", "LICENSE", "examples", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
